# rust-image-manipulations

./: Cargo.toml
src/: convulutions.rs  gauss.rs  histogram.rs  luma_operations.rs  main.rs  utils.rs
static/: main.css  matrix.js
templates/: index.hbs
